# fish-audio-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/fishaudio/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  build.gradle.kts  settings.gradle.kts
java/runapi-core/src/main/java/ai/runapi/core/contract/: ContractGen.java
java/runapi-fish-audio/: build.gradle.kts
java/runapi-fish-audio/src/main/java/ai/runapi/fishaudio/: FishAudioClient.java
java/runapi-fish-audio/src/main/java/ai/runapi/fishaudio/resources/: FishaudioResource.java  (+1 more)
java/runapi-fish-audio/src/test/java/ai/runapi/fishaudio/: FishAudioClientTest.java  FishAudioLiveApiSmokeTest.java  FishAudioLocalApiSmokeTest.java
js/: README.md  package.json  tsconfig.json
js/skills/fish-audio/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: text-to-speech.ts
js/tests/unit/: resources.test.ts
python/: README.md  pyproject.toml
python/src/runapi/fish_audio/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/fish_audio/resources/: __init__.py  text_to_speech.py
python/tests/: test_client.py
ruby/: README.md  runapi-fish-audio.gemspec
ruby/lib/: runapi-fish_audio.rb
ruby/lib/runapi/: fish_audio.rb
ruby/lib/runapi/fish_audio/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/fish_audio/resources/: text_to_speech.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/fish_audio/: client_spec.rb
ruby/spec/runapi/fish_audio/resources/: text_to_speech_spec.rb
(+7 files in other folders)
