[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-fish-audio"
version = "0.1.1"
description = "RunAPI Fish Audio SDK for speech generation in JavaScript, Python, Ruby, Go, Java, and PHP"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "runapi-ai", "fish-audio", "tts", "speech", "audio", "api", "sdk", "typescript", "python", "ruby", "golang", "java", "maven"]
dependencies = ["runapi-core>=0.2.2"]

[project.urls]
Homepage = "https://runapi.ai/models/fish-audio"
Documentation = "https://runapi.ai/docs#sdk-fish-audio"
Source = "https://github.com/runapi-ai/fish-audio-sdk"
Issues = "https://github.com/runapi-ai/fish-audio-sdk/issues"
Changelog = "https://github.com/runapi-ai/fish-audio-sdk/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/runapi-ai/fish-audio-sdk/releases/tag/python%2Fv0.1.1"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "fish-audio"
